--- a/index.html
+++ b/index.html
@@ -31,57 +31,52 @@
             max-width: 1200px; margin: 0 auto;
             padding: 80px 20px 40px;
             text-align: left;
+            position: relative; z-index: 2; /* 배경보다 위에 오도록 설정 */
         }
         header h1 { font-size: 3.5rem; font-weight: 800; margin: 0; letter-spacing: -2px; }
         header h1 span { color: var(--accent); }
         header p.tagline { font-size: 1.5rem; color: var(--text-sub); margin-top: 20px; font-weight: 300; }
 
-        /* --- [신규] 무한 롤링 배너 & 켄 번즈 효과 --- */
+        /* --- [수정됨] 배경 흐림 및 빠른 속도 적용 --- */
         .marquee-section {
             width: 100%;
+            height: 220px; /* 고정 높이 */
             overflow: hidden;
             background: #000;
-            border-top: 1px solid var(--border);
-            border-bottom: 1px solid var(--border);
-            margin-bottom: 60px;
             position: relative;
+            margin-bottom: 60px;
+            z-index: 1; /* 다른 콘텐츠 뒤로 배치 */
+            /* 양끝이 부드럽게 사라지는 마스크 효과 */
+            mask-image: linear-gradient(to right, transparent, black 15%, black 85%, transparent);
+            -webkit-mask-image: linear-gradient(to right, transparent, black 15%, black 85%, transparent);
         }
 
         .marquee-track {
             display: flex;
             width: max-content;
-            /* 좌측에서 우측으로 무한 이동 (scroll-right 애니메이션) */
-            animation: scroll-right 40s linear infinite;
+            /* 속도 향상: 40s -> 20s */
+            animation: scroll-right 20s linear infinite;
+            /* [핵심] 배경 흐림 및 투명도 효과 */
+            filter: blur(5px) grayscale(30%);
+            opacity: 0.4;
+            will-change: transform; /* 성능 최적화 */
         }
 
         .marquee-item {
-            width: 400px;
-            height: 250px;
-            overflow: hidden;
-            position: relative;
+            width: 350px;
+            height: 220px;
             flex-shrink: 0;
-            border-right: 1px solid var(--border);
+            /* 테두리 제거 및 이미지 꽉 채우기 */
         }
 
         .marquee-item img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            /* 영상처럼 움직이는 켄 번즈 효과 애니메이션 적용 */
-            animation: kenBurnsMarquee 12s ease-in-out infinite alternate;
+            /* 내부 움직임 제거하고 부드러운 흐름 유지 */
         }
 
-        /* 배너 텍스트 오버레이 */
-        .marquee-overlay {
-            position: absolute;
-            bottom: 0; left: 0; width: 100%;
-            background: linear-gradient(transparent, rgba(0,0,0,0.8));
-            padding: 20px;
-            box-sizing: border-box;
-            color: #fff;
-            font-weight: 600;
-            font-size: 0.9rem;
-        }
+        /* 텍스트 오버레이 제거됨 */
 
         /* 무한 스크롤 애니메이션 (좌 -> 우) */
         @keyframes scroll-right {
@@ -89,16 +84,11 @@
             100% { transform: translateX(0); }
         }
 
-        /* 영상처럼 확대/축소되는 애니메이션 */
-        @keyframes kenBurnsMarquee {
-            0% { transform: scale(1) translate(0, 0); }
-            100% { transform: scale(1.15) translate(-2%, -1%); }
-        }
-
-        /* 2. 보유 기술 섹션 */
+        /* 2. 보유 기술 섹션 (z-index 추가) */
         .section-title {
             max-width: 1200px; margin: 0 auto 30px; padding: 0 20px;
             font-size: 1.8rem; font-weight: 700; display: flex; align-items: center; gap: 10px;
+            position: relative; z-index: 2;
         }
         .section-title i { color: var(--accent); font-size: 1.4rem; }
 
@@ -108,6 +98,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 15px;
+            position: relative; z-index: 2;
         }
 
         .skill-item {
@@ -128,13 +119,14 @@
         .stars { color: var(--star); font-size: 0.85rem; }
         .skill-desc { color: var(--text-sub); font-size: 0.9rem; line-height: 1.4; }
 
-        /* 3. 프로젝트 그리드 */
+        /* 3. 프로젝트 그리드 (z-index 추가) */
         .project-container {
             max-width: 1200px; margin: 0 auto 100px;
             padding: 0 20px;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
+            position: relative; z-index: 2;
         }
 
         .project-card {
@@ -170,7 +162,7 @@
             z-index: 1000; justify-content: center; align-items: center; padding: 20px;
         }
         .modal-content {
-            background: #111113; width: 100%; max-width: 1100px; height: 90vh;
+            background: #111113; width: 100%; max-width: 1000px; height: 90vh;
             border-radius: 32px; overflow-y: auto; border: 1px solid var(--border);
         }
         .modal-body { padding: 50px; }
@@ -188,21 +180,21 @@
 
     <header>
         <h1><span>이재영</span> | Game Designer</h1>
-        [cite_start]<p class="tagline">"QA에서 시작한 경험이 기획의 깊이가 된 게임 체인저" [cite: 9, 70]</p>
+        <p class="tagline">"QA에서 시작한 경험이 기획의 깊이가 된 게임 체인저"</p>
     </header>
 
     <section class="marquee-section">
         <div class="marquee-track">
-            <div class="marquee-item"><img src="P1.png"><div class="marquee-overlay">01 | RHYTHM ELEVEN</div></div>
-            <div class="marquee-item"><img src="P2.png"><div class="marquee-overlay">02 | 코코두기 (Kokodugi)</div></div>
-            <div class="marquee-item"><img src="P3.png"><div class="marquee-overlay">03 | 게임 밸런스 개선안</div></div>
-            <div class="marquee-item"><img src="P4.png"><div class="marquee-overlay">04 | 감독의 전술 노트</div></div>
-            <div class="marquee-item"><img src="P5.png"><div class="marquee-overlay">05 | 공공 야간약국 선정</div></div>
-            <div class="marquee-item"><img src="P1.png"><div class="marquee-overlay">01 | RHYTHM ELEVEN</div></div>
-            <div class="marquee-item"><img src="P2.png"><div class="marquee-overlay">02 | 코코두기 (Kokodugi)</div></div>
-            <div class="marquee-item"><img src="P3.png"><div class="marquee-overlay">03 | 게임 밸런스 개선안</div></div>
-            <div class="marquee-item"><img src="P4.png"><div class="marquee-overlay">04 | 감독의 전술 노트</div></div>
-            <div class="marquee-item"><img src="P5.png"><div class="marquee-overlay">05 | 공공 야간약국 선정</div></div>
+            <div class="marquee-item"><img src="P1.png"></div>
+            <div class="marquee-item"><img src="P2.png"></div>
+            <div class="marquee-item"><img src="P3.png"></div>
+            <div class="marquee-item"><img src="P4.png"></div>
+            <div class="marquee-item"><img src="P5.png"></div>
+            <div class="marquee-item"><img src="P1.png"></div>
+            <div class="marquee-item"><img src="P2.png"></div>
+            <div class="marquee-item"><img src="P3.png"></div>
+            <div class="marquee-item"><img src="P4.png"></div>
+            <div class="marquee-item"><img src="P5.png"></div>
         </div>
     </section>
 
@@ -230,7 +222,7 @@
         </div>
         <div class="skill-item">
             <div class="skill-top"><div class="skill-name"><i class="fa-solid fa-gamepad"></i> Gamemaker</div><div class="stars">★★★★☆</div></div>
-            <div class="skill-desc">축구 + 리듬 게임 기획 및 1인 개발 경험</div>
+            <div class="skill-desc">1인 기획 및 개발 경험</div>
         </div>
         <div class="skill-item">
             <div class="skill-top"><div class="skill-name"><i class="fa-brands fa-unity"></i> Unity</div><div class="stars">★★★☆☆</div></div>
@@ -250,23 +242,23 @@
     <div class="project-container">
         <div class="project-card" onclick="openModal(0)">
             <div class="card-img-box"><img src="P1.png"></div>
-            [cite_start]<div class="card-info-box"><span class="tag">1인 기획 & 개발</span><h3>RHYTHM ELEVEN</h3><p>축구 전략과 리듬 액션의 결합 [cite: 92, 108]</p></div>
+            <div class="card-info-box"><span class="tag">1인 기획 & 개발</span><h3>RHYTHM ELEVEN</h3><p>축구 전략과 리듬 액션의 결합</p></div>
         </div>
         <div class="project-card" onclick="openModal(1)">
             <div class="card-img-box"><img src="P2.png"></div>
-            [cite_start]<div class="card-info-box"><span class="tag">10인 팀 협업</span><h3>코코두기 (Kokodugi)</h3><p>학습 곡선을 고려한 레벨 디자인 [cite: 93, 285]</p></div>
+            <div class="card-info-box"><span class="tag">10인 팀 협업</span><h3>코코두기 (KOKODUGI)</h3><p>학습 곡선을 고려한 레벨 디자인</p></div>
         </div>
         <div class="project-card" onclick="openModal(2)">
             <div class="card-img-box"><img src="P3.png"></div>
-            [cite_start]<div class="card-info-box"><span class="tag">EA KOREA 실무</span><h3>밸런스 개선안</h3><p>지표를 통해 증명하는 밸런싱 [cite: 313, 330]</p></div>
+            <div class="card-info-box"><span class="tag">EA KOREA 실무</span><h3>밸런스 개선안</h3><p>지표를 통해 증명하는 밸런싱</p></div>
         </div>
         <div class="project-card" onclick="openModal(3)">
-            <div class="card-img-box"><img src="P4.png"></div>
-            [cite_start]<div class="card-info-box"><span class="tag">시스템 제안</span><h3>감독의 전술 노트</h3><p>전술적 갈증을 성장의 재미로 전환 [cite: 417, 428]</p></div>
+            <div class="card-img-box"><img src="P4.png" style="width:100%; height:220px; object-fit:contain;"></div>
+            <div class="card-info-box"><span class="tag">시스템 제안</span><h3>감독의 전술 노트</h3><p>전술적 갈증을 성장의 재미로 전환</p></div>
         </div>
         <div class="project-card" onclick="openModal(4)">
-            <div class="card-img-box"><img src="P5.png"></div>
-            [cite_start]<div class="card-info-box"><span class="tag">데이터 분석</span><h3>공공 야간약국 선정</h3><p>의료 공백 해소를 위한 최적 입지 [cite: 604, 617]</p></div>
+            <div class="card-img-box"><img src="P5.png" style="width:100%; height:220px; object-fit:contain;"></div>
+            <div class="card-info-box"><span class="tag">데이터 분석</span><h3>공공 야간약국 선정</h3><p>의료 공백 해소를 위한 최적 입지</p></div>
         </div>
     </div>
 
@@ -278,20 +270,20 @@
 
     <script>
         const projects = [
-            [cite_start]{ title: "RHYTHM ELEVEN", tag: "1인 기획 & 개발", desc: "유저를 넘어 재미를 설계하는 기획자로 거듭난 기록입니다[cite: 105]. [cite_start]축구의 전략성과 리듬게임의 실력을 융합하였습니다 [cite: 122][cite_start].", stats: "<li>AI를 코딩파트너로 활용하여 로직 효율성 검증 [cite: 194][cite_start]</li><li>노트 속도와 HP 기반의 동적 난이도 설계 [cite: 245]</li>", img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            [cite_start]{ title: "코코두기 (Kokodugi)", tag: "10인 팀 협업", desc: "실제 상용화 단계를 고려한 제작 과정을 경험했습니다[cite: 263]. [cite_start]유저가 스스로 체득하는 단계적 튜토리얼을 구축했습니다 [cite: 288][cite_start].", stats: "<li>Excel VBA 기반 전용 데이터 입력기 개발 [cite: 259, 308][cite_start]</li><li>Figma 기반의 상세 가이드를 통한 편의성 완성 [cite: 292]</li>", img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            [cite_start]{ title: "게임 밸런스 개선안", tag: "EA KOREA 실무", desc: "라이브 지표 분석을 통해 유저 만족도의 하락 원인을 찾았습니다[cite: 350]. [cite_start]1년 전 대비 패스 시도 83% 감소 원인을 논리적으로 증명했습니다 [cite: 371, 374][cite_start].", stats: "<li>부정 여론 2,000건을 Excel 객관적 지표로 분석 [cite: 349, 353][cite_start]</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증 [cite: 371]</li>", img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            [cite_start]{ title: "감독의 전술 노트", tag: "신규 시스템 제안", desc: "기존의 제한적인 팀 컬러 문제를 해결하기 위한 수집/시너지 시스템입니다[cite: 438, 451]. [cite_start]수집-조합-시너지-성장의 선순환 구조를 설계했습니다 [cite: 483][cite_start].", stats: "<li>감독-클럽 조합을 통한 능력치 보너스 시너지 설계 [cite: 463][cite_start]</li><li>유저 성향별 맞춤형 BM(시즌 패스/감독팩) 기획 [cite: 487]</li>", img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            [cite_start]{ title: "공공 야간약국 최적지 선정", tag: "데이터 분석", desc: "서비스 불균형 포착을 위해 자치구별 정량 데이터를 모델링했습니다[cite: 647, 651]. [cite_start]양천구를 최적 입지 1순위로 선정했습니다 [cite: 676][cite_start].", stats: "<li>총인구, 응급실 거리 등 복합 가중치 로직 설계 [cite: 678][cite_start]</li><li>Python과 QGIS를 활용한 데이터 근거 기반 전략 수립 [cite: 679]</li>", img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" }
+            { title: "RHYTHM ELEVEN", tag: "1인 기획 & 개발", desc: "유저를 넘어 재미를 설계하는 기획자로 거듭난 기록입니다. 축구의 전략성과 리듬게임의 실력을 융합하였습니다.", stats: "<li>AI를 코딩파트너로 활용하여 로직 효율성 검증</li><li>노트 속도와 HP 기반의 동적 난이도 설계</li>", img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "코코두기 (KOKODUGI)", tag: "10인 팀 협업", desc: "실제 상용화 단계를 고려한 제작 과정을 경험했습니다. 유저가 스스로 체득하는 단계적 튜토리얼을 구축했습니다.", stats: "<li>Excel VBA 기반 전용 데이터 입력기 개발</li><li>Figma 기반의 상세 가이드를 통한 편의성 완성</li>", img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "게임 밸런스 개선안", tag: "EA KOREA 실무", desc: "라이브 지표 분석을 통해 유저 만족도의 하락 원인을 찾았습니다. 1년 전 대비 패스 시도 83% 감소 원인을 논리적으로 증명했습니다.", stats: "<li>부정 여론 2,000건을 Excel 객관적 지표로 분석</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "감독의 전술 노트", tag: "신규 시스템 제안", desc: "기존의 제한적인 팀 컬러 문제를 해결하기 위한 수집/시너지 시스템입니다. 수집-조합-시너지-성장의 선순환 구조를 설계했습니다.", stats: "<li>감독-클럽 조합을 통한 능력치 보너스 시너지 설계</li><li>유저 성향별 맞춤형 BM(시즌 패스/감독팩) 기획</li>", img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            { title: "공공 야간약국 최적지 선정", tag: "데이터 분석", desc: "서비스 불균형 포착을 위해 자치구별 정량 데이터를 모델링했습니다. 양천구를 최적 입지 1순위로 선정했습니다.", stats: "<li>총인구, 응급실 거리 등 복합 가중치 로직 설계</li><li>Python과 QGIS를 활용한 데이터 근거 기반 전략 수립</li>", img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" }
         ];
 
         function openModal(i) {
             const p = projects[i];
             document.getElementById('modalBody').innerHTML = `
                 <div style="text-align:right;"><span style="cursor:pointer; font-size:30px;" onclick="closeModal()">×</span></div>
-                <img src="${p.img}" style="width:100%; border-radius:20px; margin-bottom:20px;">
+                <img src="${p.img}" style="width:100%; border-radius:20px; margin-bottom:20px; box-shadow: 0 10px 30px rgba(0,0,0,0.5);">
                 <h2>${p.title}</h2><p style="color:var(--accent); font-weight:700;">${p.tag}</p>
-                <p class="desc-text">${p.desc}</p>
+                <p style="font-size:1.2rem; line-height:1.8; color:var(--text-sub);">${p.desc}</p>
                 <div class="info-box"><h4>주요 기여 및 성과</h4><ul>${p.stats}</ul></div>
                 <iframe src="${p.pdf}" class="pdf-view"></iframe>
             `;
