--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             --bg: #000000;
             --card: #1a1a1a;
             --pixel-border: #ffffff;
-            --accent: #00ff00; /* 클래식 게임 그린 */
+            --accent: #97c1e7; 
             --accent-pink: #ff00ff;
             --text-main: #ffffff;
             --text-sub: #aaaaaa;
