--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>이재영 | Game Designer Portfolio (Pixel Ver.)</title>
+    <title>이재영 | 게임 기획자 포트폴리오 (픽셀 버전)</title>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -19,7 +19,7 @@
         }
 
         /* 폰트 설정 */
-        h1, h2, h3, .pixel-font, .tag { font-family: 'Press Start 2P', cursive; text-transform: uppercase; }
+        h1, h2, h3, .pixel-font, .tag { font-family: 'Press Start 2P', cursive; }
         body { background-color: var(--bg); color: var(--text-main); font-family: 'Pretendard', sans-serif; margin: 0; padding: 0; cursor: url('https://cur.cursors-4u.net/games/gam-4/gam382.cur'), auto; }
 
         /* --- 1. 인트로 오버레이 --- */
@@ -28,21 +28,19 @@
             background: #000; z-index: 9999; display: flex; flex-direction: column;
             justify-content: center; align-items: center; text-align: center;
         }
-        #intro-overlay h1 { font-size: 2rem; color: var(--accent); margin-bottom: 50px; line-height: 1.5; }
+        #intro-overlay h1 { font-size: 1.5rem; color: var(--accent); margin-bottom: 50px; line-height: 2; }
         .blink { animation: blink 1s infinite; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
 
-        /* 픽셀 스타일 버튼 */
         .btn-pixel {
             padding: 20px 40px; background: var(--pixel-border); color: #000;
             font-family: 'Press Start 2P', cursive; border: none; cursor: pointer;
             box-shadow: -5px 0 0 0 #000, 5px 0 0 0 #000, 0 -5px 0 0 #000, 0 5px 0 0 #000;
-            transition: 0.1s;
+            transition: 0.1s; font-size: 0.8rem;
         }
         .btn-pixel:hover { background: var(--accent); }
-        .btn-pixel:active { transform: translateY(5px); box-shadow: none; }
 
-        /* --- 2. 배경 스캔라인 효과 (고전 TV 느낌) --- */
+        /* --- 2. 배경 스캔라인 효과 --- */
         body::before {
             content: " "; display: block; position: fixed; top: 0; left: 0; bottom: 0; right: 0;
             background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.25) 50%), 
@@ -52,57 +50,56 @@
 
         /* --- 3. 헤더 섹션 --- */
         header { max-width: 1200px; margin: 0 auto; padding: 100px 20px 40px; position: relative; z-index: 10; }
-        header h1 { font-size: 2rem; color: var(--accent); }
+        header h1 { font-size: 1.8rem; color: var(--accent); }
         header h1 span { color: var(--accent-pink); }
         header p.tagline { font-size: 1.1rem; color: var(--text-sub); margin-top: 30px; letter-spacing: 1px; }
 
-        /* --- 4. 무한 배경 롤링 (픽셀 창 스타일) --- */
+        /* --- 4. 무한 배경 롤링 --- */
         .background-marquee {
             position: absolute; top: 0; left: 0; width: 100%; height: 500px;
-            overflow: hidden; z-index: -1; opacity: 0.2; filter: grayscale(1);
+            overflow: hidden; z-index: -1; opacity: 0.15; filter: grayscale(1) blur(2px);
         }
-        .marquee-track { display: flex; width: max-content; animation: scroll-right 20s linear infinite; padding-top: 50px; }
+        .marquee-track { display: flex; width: max-content; animation: scroll-right 30s linear infinite; padding-top: 50px; }
         .window-item { 
             width: 250px; height: 180px; background: #333; margin-right: 40px; 
-            border: 4px solid #fff; box-shadow: 8px 8px 0 #000;
+            border: 4px solid #fff;
         }
         @keyframes scroll-right { 0% { transform: translateX(-50%); } 100% { transform: translateX(0); } }
 
-        /* --- 5. 보유 기술 (스탯 창 스타일) --- */
-        .section-title { max-width: 1200px; margin: 0 auto 30px; padding: 0 20px; font-size: 1.2rem; color: var(--accent); }
+        /* --- 5. 보유 기술 (이미지 정보 12종 반영) --- */
+        .section-title { max-width: 1200px; margin: 0 auto 30px; padding: 0 20px; font-size: 1rem; color: var(--accent); }
         .skills-container { 
             max-width: 1200px; margin: 0 auto 80px; padding: 0 20px; 
             display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; 
         }
         .skill-item {
-            background: #000; border: 4px solid #fff; padding: 20px;
+            background: rgba(0,0,0,0.7); border: 4px solid #fff; padding: 20px;
             transition: 0.2s; position: relative;
         }
-        .skill-item:hover { border-color: var(--accent); transform: scale(1.05); }
-        .skill-name { font-size: 0.8rem; margin-bottom: 10px; color: var(--accent); }
-        .stars { color: #ffff00; font-size: 0.7rem; }
-        .skill-desc { color: #fff; font-size: 0.85rem; margin-top: 10px; line-height: 1.4; }
+        .skill-item:hover { border-color: var(--accent); transform: scale(1.03); background: #111; }
+        .skill-name { font-size: 0.75rem; margin-bottom: 10px; color: var(--accent); font-weight: bold; }
+        .stars { color: #ffff00; font-size: 0.6rem; margin-bottom: 10px; }
+        .skill-desc { color: #fff; font-size: 0.85rem; line-height: 1.5; }
 
-        /* --- 6. 프로젝트 (게임 팩 스타일) --- */
+        /* --- 6. 프로젝트 섹션 --- */
         .project-container { max-width: 1200px; margin: 0 auto 100px; padding: 0 20px; display: grid; grid-template-columns: repeat(3, 1fr); gap: 40px; }
         .project-card {
-            background: #111; border: 4px solid #fff; border-radius: 0; /* 픽셀은 직각 */
-            cursor: pointer; position: relative; transition: 0.2s;
+            background: #111; border: 4px solid #fff; cursor: pointer; position: relative; transition: 0.2s;
         }
         .project-card:hover { transform: translateY(-10px); border-color: var(--accent-pink); box-shadow: 10px 10px 0 var(--accent-pink); }
         .card-img-box { width: 100%; height: 200px; background: #000; display: flex; align-items: center; justify-content: center; border-bottom: 4px solid #fff; }
         .card-img-box img { width: 100%; height: 100%; object-fit: contain; }
         .card-info-box { padding: 20px; text-align: center; }
-        .tag { font-size: 0.5rem; color: var(--accent); display: block; margin-bottom: 10px; }
-        .project-card h3 { font-size: 0.8rem; margin: 0; line-height: 1.5; }
+        .tag { font-size: 0.45rem; color: var(--accent); display: block; margin-bottom: 10px; }
+        .project-card h3 { font-size: 0.75rem; margin: 0; line-height: 1.5; font-family: 'Press Start 2P'; }
 
-        /* --- 7. 모달 (게임 정보창 스타일) --- */
+        /* --- 7. 모달 (한글화) --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.9); z-index: 10000; justify-content: center; align-items: center; padding: 20px; }
-        .modal-content { background: #000; border: 8px solid #fff; width: 100%; max-width: 1000px; height: 90vh; overflow-y: auto; padding: 40px; box-sizing: border-box; }
-        .close-pixel { position: absolute; top: 20px; right: 20px; color: #fff; font-size: 2rem; cursor: pointer; }
-        .info-box { border: 4px dashed var(--accent); padding: 20px; margin: 20px 0; }
-        .info-box h4 { color: var(--accent); font-size: 0.7rem; margin-top: 0; }
-        iframe { width: 100%; height: 600px; border: 4px solid #fff; margin-top: 20px; }
+        .modal-content { background: #000; border: 8px solid #fff; width: 100%; max-width: 1100px; height: 90vh; overflow-y: auto; padding: 50px; box-sizing: border-box; }
+        .close-pixel { position: absolute; top: 20px; right: 20px; color: #fff; font-size: 1.5rem; cursor: pointer; font-family: 'Press Start 2P'; }
+        .info-box { border: 4px dashed var(--accent); padding: 25px; margin: 25px 0; }
+        .info-box h4 { color: var(--accent); font-size: 0.7rem; margin-top: 0; font-family: 'Press Start 2P'; }
+        iframe { width: 100%; height: 700px; border: 4px solid #fff; margin-top: 30px; }
 
         @media (max-width: 900px) { .skills-container, .project-container { grid-template-columns: 1fr; } }
     </style>
@@ -110,9 +107,9 @@
 <body>
 
     <div id="intro-overlay">
-        <h1>GAME DESIGNER<br>LEE JAE YOUNG<br><span>PORTFOLIO</span></h1>
-        <button class="btn-pixel blink" onclick="startGame()">PRESS START</button>
-        <p style="margin-top: 30px; font-size: 0.6rem; color: #555;">© 1997-2026 JAE YOUNG PIXEL INC.</p>
+        <h1>게임 디자이너<br>이재영<br><span>포트폴리오</span></h1>
+        <button class="btn-pixel blink" onclick="startGame()">모험 시작 (START)</button>
+        <p style="margin-top: 30px; font-size: 0.6rem; color: #555; font-family: 'Press Start 2P';">© 1997-2026 JAE YOUNG PIXEL INC.</p>
     </div>
 
     <div class="background-marquee">
@@ -128,71 +125,94 @@
     </div>
 
     <header>
-        <h1>LEE JAE YOUNG<span>_</span></h1>
-        <p class="tagline">> DATA-DRIVEN GAME CHANGER LOADING...</p>
+        <h1>이재영(LEE JAE YOUNG)<span>_</span></h1>
+        <p class="tagline">> 데이터 기반의 게임 체인저 로딩 완료...</p>
     </header>
 
-    <h2 class="section-title">> PLAYER ABILITIES</h2>
+    <h2 class="section-title">> 보유 기술 (PLAYER ABILITIES)</h2>
     <div class="skills-container">
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">JIRA</div><div class="stars">★★★★★</div></div>
-            <div class="skill-desc">BUG TRACKING & SCHEDULING</div>
+            <div class="skill-name">Jira</div><div class="stars">★★★★★</div>
+            <div class="skill-desc">마일스톤 관리, 버그 및 이슈 트래킹, 일정 관리</div>
         </div>
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">SLACK</div><div class="stars">★★★★★</div></div>
-            <div class="skill-desc">TEAM COMM & HISTORY</div>
+            <div class="skill-name">Slack</div><div class="stars">★★★★★</div>
+            <div class="skill-desc">원활한 커뮤니케이션, 히스토리 및 문서 정리</div>
         </div>
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">CONFLUENCE</div><div class="stars">★★★★★</div></div>
-            <div class="skill-desc">DOCS & WORKSPACE</div>
+            <div class="skill-name">Confluence</div><div class="stars">★★★★★</div>
+            <div class="skill-desc">프로젝트 관리 및 문서화, 협업 워크스페이스 구축</div>
         </div>
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">EXCEL</div><div class="stars">★★★★☆</div></div>
-            <div class="skill-desc">DATA VIZ & VBA MACRO</div>
+            <div class="skill-name">Excel</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">데이터 필터링 및 정렬, 지표 시각화, 매크로(VBA) 기초 활용</div>
         </div>
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">FIGMA</div><div class="stars">★★★★☆</div></div>
-            <div class="skill-desc">UI/UX & PROTOTYPING</div>
+            <div class="skill-name">Figma</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">UI/UX 디자인, 프로토타입 제작, 협업 프로젝트 관리</div>
         </div>
         <div class="skill-item">
-            <div class="skill-top"><div class="skill-name">GM MAKER</div><div class="stars">★★★★☆</div></div>
-            <div class="skill-desc">SOCCER+RHYTHM SOLO DEV</div>
+            <div class="skill-name">Gamemaker</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">축구 + 리듬 게임 기획 및 1인 개발 경험</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">Unity</div><div class="stars">★★★☆☆</div>
+            <div class="skill-desc">팀 프로젝트 기반 협업, 기본적인 엔진 기능 활용</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">Gemini</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">코딩 파트너, 자료 정리 및 시각화 활용</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">Notion</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">대시보드 관리, 문서 아카이빙 및 히스토리 정리</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">PowerPoint</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">프레젠테이션 및 비즈니스 문서 작성, 시각적 커뮤니케이션</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">Word</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">제안서 문서화 및 표준 문서 관리</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-name">NotebookLM</div><div class="stars">★★★★☆</div>
+            <div class="skill-desc">방대한 설정 및 자료 분석, 기획 논리 구조 검증</div>
         </div>
     </div>
 
-    <h2 class="section-title">> SELECT STAGE</h2>
+    <h2 class="section-title">> 스테이지 선택 (SELECT STAGE)</h2>
     <div class="project-container">
         <div class="project-card" onclick="openModal(0)">
             <div class="card-img-box"><img src="P1.png"></div>
-            <div class="card-info-box"><span class="tag">SOLO DEV</span><h3>RHYTHM ELEVEN</h3></div>
+            <div class="card-info-box"><span class="tag">1인 개발</span><h3>RHYTHM ELEVEN</h3></div>
         </div>
         <div class="project-card" onclick="openModal(1)">
             <div class="card-img-box"><img src="P2.png"></div>
-            <div class="card-info-box"><span class="tag">10P TEAM</span><h3>KOKODUGI</h3></div>
+            <div class="card-info-box"><span class="tag">10인 팀 협업</span><h3>코코두기 (KOKODUGI)</h3></div>
         </div>
         <div class="project-card" onclick="openModal(2)">
             <div class="card-img-box"><img src="P3.png"></div>
-            <div class="card-info-box"><span class="tag">EA KOREA</span><h3>BALANCE FIX</h3></div>
+            <div class="card-info-box"><span class="tag">실무 프로젝트</span><h3>밸런스 개선안</h3></div>
         </div>
         <div class="project-card" onclick="openModal(3)">
             <div class="card-img-box"><img src="P4.png"></div>
-            <div class="card-info-box"><span class="tag">SYSTEM</span><h3>TACTICS NOTE</h3></div>
+            <div class="card-info-box"><span class="tag">시스템 기획</span><h3>감독의 전술 노트</h3></div>
         </div>
         <div class="project-card" onclick="openModal(4)">
             <div class="card-img-box"><img src="P5.png"></div>
-            <div class="card-info-box"><span class="tag">DATA</span><h3>PHARMACY MAP</h3></div>
+            <div class="card-info-box"><span class="tag">데이터 분석</span><h3>공공 야간약국</h3></div>
         </div>
     </div>
 
     <div id="projectModal" class="modal" onclick="closeModal()">
         <div class="modal-content" onclick="event.stopPropagation()">
             <span class="close-pixel" onclick="closeModal()">[X]</span>
-            <div id="modalBody" class="modal-body"></div>
+            <div id="modalBody"></div>
         </div>
     </div>
 
     <script>
-        // 인트로 종료 함수
         function startGame() {
             const overlay = document.getElementById('intro-overlay');
             overlay.style.transition = '0.5s';
@@ -201,25 +221,25 @@
         }
 
         const projects = [
-            { title: "RHYTHM ELEVEN", tag: "SOLO DEV", desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다.", stats: "<li>AI 코딩파트너를 통한 효율성 검증</li><li>동적 난이도 설계</li>", img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            { title: "KOKODUGI", tag: "10P TEAM", desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다.", stats: "<li>Excel VBA 데이터 매니저 개발</li><li>단계적 튜토리얼 구축</li>", img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            { title: "BALANCE FIX", tag: "EA KOREA", desc: "로빙 스루 패스 지표 분석을 통해 밸런싱의 근거를 증명했습니다.", stats: "<li>부정 여론 2,000건 정량 분석</li><li>수비 AI 개선안 제시</li>", img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            { title: "TACTICS NOTE", tag: "SYSTEM", desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다.", stats: "<li>시너지 성장 모델 설계</li><li>다각도 BM 기획</li>", img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
-            { title: "PHARMACY MAP", tag: "DATA", desc: "의료 사각지대 해소를 위한 정량적 입지 전략입니다.", stats: "<li>복합 가중치 로직 설계</li><li>QGIS 시각화 분석</li>", img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" }
+            [cite_start]{ title: "RHYTHM ELEVEN", tag: "1인 기획 및 개발", desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 독창적 장르입니다 [cite: 108][cite_start].", stats: "<li>AI 코딩 파트너를 통한 로직 효율성 검증 [cite: 194][cite_start]</li><li>동적 난이도 시스템 설계 [cite: 216]</li>", img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            [cite_start]{ title: "코코두기 (KOKODUGI)", tag: "10인 팀 협업", desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다 [cite: 263][cite_start].", stats: "<li>Excel VBA 데이터 입력기 자체 개발 [cite: 259][cite_start]</li><li>단계적 튜토리얼 및 레벨 디자인 구축 [cite: 255, 288]</li>", img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            [cite_start]{ title: "밸런스 개선안", tag: "EA KOREA 실무", desc: "라이브 지표 분석을 통해 밸런싱의 근거를 정량적으로 증명했습니다 [cite: 330, 331][cite_start].", stats: "<li>부정 여론 2,000건 데이터 분석 및 너프 현상 입증 [cite: 349, 371]</li><li>실점률 8% 감소 등 실제 지표 개선 기여</li>", img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            [cite_start]{ title: "감독의 전술 노트", tag: "신규 시스템 기획", desc: "전술적 갈증을 성장의 재미로 전환하는 수집형 성장 시스템입니다 [cite: 428][cite_start].", stats: "<li>수집-조합-시너지-성장 코어 루프 설계 [cite: 483][cite_start]</li><li>다각도 BM 및 경제 구조 구축 [cite: 422]</li>", img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" },
+            [cite_start]{ title: "공공 야간약국", tag: "데이터 분석", desc: "의료 사각지대 해소를 위한 정량적 입지 선정 전략입니다 [cite: 608][cite_start].", stats: "<li>자치구별 복합 가중치 로직 설계 [cite: 678][cite_start]</li><li>Python 및 QGIS 시각화 분석 [cite: 679]</li>", img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" }
         ];
 
         function openModal(i) {
             const p = projects[i];
             document.getElementById('modalBody').innerHTML = `
                 <img src="${p.img}" style="width:100%; border:4px solid #fff; margin-bottom:20px;">
-                <h2 style="color:var(--accent);">${p.title}</h2>
-                <p class="pixel-font" style="font-size:0.7rem; color:var(--accent-pink);">${p.tag}</p>
-                <p style="font-size:1rem; line-height:1.6;">${p.desc}</p>
+                <h2 style="color:var(--accent); font-family:'Press Start 2P'; font-size:1.5rem;">${p.title}</h2>
+                <p style="font-weight:bold; color:var(--accent-pink); margin-bottom:20px;">[ ${p.tag} ]</p>
+                <p style="font-size:1.1rem; line-height:1.8;">${p.desc}</p>
                 <div class="info-box">
-                    <h4>[ MISSION LOG ]</h4>
-                    <ul style="font-size:0.8rem; line-height:1.8;">${p.stats}</ul>
+                    <h4>[ 미션 기록 (MISSION LOG) ]</h4>
+                    <ul style="font-size:0.95rem; line-height:2;">${p.stats}</ul>
                 </div>
-                <iframe src="${p.pdf}"></iframe>
+                <iframe src="${p.pdf}#toolbar=0"></iframe>
             `;
             document.getElementById('projectModal').style.display = 'flex';
             document.body.style.overflow = 'hidden';
