--- a/index.html
+++ b/index.html
@@ -129,62 +129,38 @@
 
     <header>
         <h1>LEE JAE YOUNG<span>_</span></h1>
-        <p class="tagline">> 데이터 기반의 게임 체인저 로딩 완료...</p>
+        <p class="tagline">> DATA-DRIVEN GAME CHANGER LOADING...</p>
     </header>
 
-<h2 class="section-title">> 보유 기술 (PLAYER ABILITIES)</h2>
-    <div class="skills-container">
-        <div class="skill-item">
-            <div class="skill-name">Jira</div><div class="stars">★★★★★</div>
-            <div class="skill-desc">마일스톤 관리, 버그 및 이슈 트래킹, 일정 관리</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Slack</div><div class="stars">★★★★★</div>
-            <div class="skill-desc">원활한 커뮤니케이션, 히스토리 및 문서 정리</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Confluence</div><div class="stars">★★★★★</div>
-            <div class="skill-desc">프로젝트 관리 및 문서화, 협업 워크스페이스 구축</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Excel</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">데이터 필터링 및 정렬, 지표 시각화, 매크로(VBA) 기초 활용</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Figma</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">UI/UX 디자인, 프로토타입 제작, 협업 프로젝트 관리</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Gamemaker</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">축구 + 리듬 게임 기획 및 1인 개발 경험</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Unity</div><div class="stars">★★★☆☆</div>
-            <div class="skill-desc">팀 프로젝트 기반 협업, 기본적인 엔진 기능 활용</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Gemini</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">코딩 파트너, 자료 정리 및 시각화 활용</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Notion</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">대시보드 관리, 문서 아카이빙 및 히스토리 정리</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">PowerPoint</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">프레젠테이션 및 비즈니스 문서 작성, 시각적 커뮤니케이션</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">Word</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">제안서 문서화 및 표준 문서 관리</div>
-        </div>
-        <div class="skill-item">
-            <div class="skill-name">NotebookLM</div><div class="stars">★★★★☆</div>
-            <div class="skill-desc">방대한 설정 및 자료 분석, 기획 논리 구조 검증</div>
-        </div>
-    </div>
+    <h2 class="section-title">> PLAYER ABILITIES</h2>
+    <div class="skills-container">
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">JIRA</div><div class="stars">★★★★★</div></div>
+            <div class="skill-desc">BUG TRACKING & SCHEDULING</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">SLACK</div><div class="stars">★★★★★</div></div>
+            <div class="skill-desc">TEAM COMM & HISTORY</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">CONFLUENCE</div><div class="stars">★★★★★</div></div>
+            <div class="skill-desc">DOCS & WORKSPACE</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">EXCEL</div><div class="stars">★★★★☆</div></div>
+            <div class="skill-desc">DATA VIZ & VBA MACRO</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">FIGMA</div><div class="stars">★★★★☆</div></div>
+            <div class="skill-desc">UI/UX & PROTOTYPING</div>
+        </div>
+        <div class="skill-item">
+            <div class="skill-top"><div class="skill-name">GM MAKER</div><div class="stars">★★★★☆</div></div>
+            <div class="skill-desc">SOCCER+RHYTHM SOLO DEV</div>
+        </div>
+    </div>
 
-    <h2 class="section-title">> 스테이지 선택 (SELECT STAGE)</h2>
+    <h2 class="section-title">> SELECT STAGE</h2>
     <div class="project-container">
         <div class="project-card" onclick="openModal(0)">
             <div class="card-img-box"><img src="P1.png"></div>
