--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --bg: #0d1117; 
+            --bg: #0a0e14; 
             --card: #161b22;
-            --pixel-white: #ffffff;
-            --accent: #97c1e7; /* 요청하신 메인 색상 */
+            --accent: #97c1e7; /* 메인 색상 */
             --accent-dim: rgba(151, 193, 231, 0.1);
             --text-main: #f0f6fc;
             --text-sub: #8b949e;
             --border: #30363d;
         }
 
-        /* 폰트 설정: 한글은 Galmuri9, 영문 포인트는 Press Start 2P */
+        /* 폰트 설정 */
         body, button, .korean-font { font-family: 'Galmuri9', sans-serif; }
         h1, h2, h3, .pixel-font, .tag { font-family: 'Press Start 2P', 'Galmuri9', cursive; }
 
@@ -32,18 +31,24 @@
             overflow-x: hidden;
         }
 
-        /* --- 1. [기능 추가] 배경 프로젝트 이미지 롤링 --- */
-        .bg-marquee {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            z-index: -1; overflow: hidden; pointer-events: none;
+        /* --- [수정됨] 선명한 프로젝트 롤링 배너 --- */
+        .rolling-banner {
+            width: 100%; height: 280px; /* 높이 제한 */
+            overflow: hidden; position: relative;
+            border-top: 3px solid var(--border);
+            border-bottom: 3px solid var(--border);
+            background: #000;
         }
         .marquee-track {
             display: flex; width: max-content;
-            animation: scroll-left 40s linear infinite;
-            filter: blur(10px) grayscale(0.5); /* 흐릿하게 처리 */
-            opacity: 0.15;
+            animation: scroll-left 40s linear infinite; /* 속도 조정 */
+            /* 블러 및 어두운 효과 제거하여 선명하게 */
+            filter: none; opacity: 1;
         }
-        .marquee-item { width: 500px; height: 100vh; flex-shrink: 0; overflow: hidden; }
+        .marquee-item { 
+            width: 450px; height: 280px; flex-shrink: 0; 
+            border-right: 2px solid var(--bg);
+        }
         .marquee-item img { width: 100%; height: 100%; object-fit: cover; }
         @keyframes scroll-left { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
 
@@ -57,57 +62,57 @@
         .blink { animation: blink 1s infinite; }
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
         .btn-pixel {
-            padding: 15px 35px; background: var(--accent); color: #0d1117;
+            padding: 15px 35px; background: var(--accent); color: #0a0e14;
             border: none; cursor: pointer; font-weight: bold;
             box-shadow: -4px 0 0 0 #000, 4px 0 0 0 #000, 0 -4px 0 0 #000, 0 4px 0 0 #000;
             transition: 0.1s; font-size: 1.1rem;
         }
 
         /* --- 3. 헤더 섹션 --- */
-        header { max-width: 1100px; margin: 0 auto; padding: 80px 20px 40px; position: relative; z-index: 10; }
+        header { max-width: 1100px; margin: 0 auto; padding: 60px 20px 40px; position: relative; z-index: 10; }
         header h1 { font-size: 1.8rem; color: var(--accent); margin: 0; }
-        header p.tagline { font-size: 1.1rem; color: var(--text-sub); margin-top: 25px; border-left: 5px solid var(--accent); padding-left: 20px; }
+        header p.tagline { font-size: 1.1rem; color: var(--text-sub); margin-top: 15px; border-left: 5px solid var(--accent); padding-left: 20px; }
 
-        /* --- 4. PLAYER ABILITIES (보유 기술) --- */
+        /* --- 4. 보유 기술 (PLAYER ABILITIES) --- */
         .section-title { 
-            max-width: 1100px; margin: 0 auto 30px; padding: 0 20px; 
-            font-size: 1.3rem; color: var(--accent); letter-spacing: 2px;
+            max-width: 1100px; margin: 0 auto 20px; padding: 0 20px; 
+            font-size: 1.2rem; color: var(--accent); letter-spacing: 1px;
         }
         .skills-wrapper {
-            max-width: 1100px; margin: 0 auto 80px; padding: 0 20px;
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px;
+            max-width: 1100px; margin: 0 auto 60px; padding: 0 20px;
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 15px;
         }
-        .skill-group { background: var(--card); border: 2px solid var(--border); padding: 25px; }
+        .skill-group { background: var(--card); border: 2px solid var(--border); padding: 20px; display: flex; flex-direction: column; }
         .skill-group-title {
-            font-size: 1rem; color: var(--accent); text-align: center; 
-            border-bottom: 2px solid var(--border); padding-bottom: 15px; margin-bottom: 25px;
+            font-size: 0.9rem; color: var(--accent); text-align: center; 
+            border-bottom: 2px solid var(--border); padding-bottom: 12px; margin-bottom: 15px;
         }
 
-        /* [수정] 상하좌우 정가운데 정렬 */
+        /* 상하좌우 정가운데 정렬 및 여백 축소 */
         .skill-item { 
             display: flex; flex-direction: column; 
             align-items: center; justify-content: center; 
-            text-align: center; min-height: 120px; margin-bottom: 15px;
+            text-align: center; padding: 10px 0;
         }
-        .skill-name { font-size: 1rem; color: var(--pixel-white); font-weight: bold; margin-bottom: 5px; }
-        .stars { color: #ffff00; font-size: 0.8rem; margin-bottom: 8px; }
-        .skill-desc { color: var(--text-sub); font-size: 0.8rem; line-height: 1.5; }
+        .skill-name { font-size: 0.9rem; color: var(--text-main); font-weight: bold; }
+        .stars { color: #ffff00; font-size: 0.7rem; margin: 4px 0; }
+        .skill-desc { color: var(--text-sub); font-size: 0.75rem; line-height: 1.4; max-width: 90%; }
 
-        /* --- 5. SELECT STAGE (프로젝트 선택) --- */
+        /* --- 5. 프로젝트 (SELECT STAGE) --- */
         .project-container { 
-            max-width: 1100px; margin: 0 auto 120px; padding: 0 20px; 
-            display: grid; grid-template-columns: repeat(3, 1fr); gap: 30px; 
+            max-width: 1100px; margin: 0 auto 100px; padding: 0 20px; 
+            display: grid; grid-template-columns: repeat(3, 1fr); gap: 25px; 
         }
         .project-card {
             background: var(--card); border: 3px solid var(--border); cursor: pointer; transition: 0.3s;
             display: flex; flex-direction: column;
         }
-        .project-card:hover { transform: translateY(-8px); border-color: var(--accent); }
-        .card-img-box { width: 100%; height: 180px; background: #000; border-bottom: 2px solid var(--border); overflow: hidden; }
+        .project-card:hover { transform: translateY(-8px); border-color: var(--accent); box-shadow: 0 0 15px var(--accent-dim); }
+        .card-img-box { width: 100%; height: 160px; background: #000; border-bottom: 2px solid var(--border); overflow: hidden; }
         .card-img-box img { width: 100%; height: 100%; object-fit: cover; }
-        .card-info-box { padding: 20px; text-align: center; flex-grow: 1; }
-        .tag { font-size: 0.65rem; color: var(--accent); margin-bottom: 10px; display: block; }
-        .project-card h3 { font-size: 1rem; margin: 0; color: #fff; line-height: 1.4; }
+        .card-info-box { padding: 15px; text-align: center; }
+        .tag { font-size: 0.6rem; color: var(--accent); margin-bottom: 8px; display: block; }
+        .project-card h3 { font-size: 0.9rem; margin: 0; color: #fff; line-height: 1.4; }
 
         /* --- 6. 모달 스타일 --- */
         .modal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 10000; justify-content: center; align-items: center; padding: 20px; }
@@ -116,12 +121,22 @@
         .info-box { border: 2px dashed var(--accent); padding: 25px; margin: 25px 0; background: var(--accent-dim); }
         iframe { width: 100%; height: 700px; border: 2px solid var(--border); margin-top: 30px; background: #fff; }
 
-        @media (max-width: 950px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } }
+        @media (max-width: 900px) { .skills-wrapper, .project-container { grid-template-columns: 1fr; } }
     </style>
 </head>
 <body>
 
-    <div class="bg-marquee">
+    <div id="intro-overlay">
+        <h1>GAME DESIGNER<br>이재영<br><span>PORTFOLIO</span></h1>
+        <button class="btn-pixel blink" onclick="startGame()">START ADVENTURE</button>
+    </div>
+
+    <header>
+        <h1>LEE JAE YOUNG<span>_</span></h1>
+        <p class="tagline">"끈기 있는 데이터 기반의 게임 체인저"</p>
+    </header>
+
+    <div class="rolling-banner">
         <div class="marquee-track">
             <div class="marquee-item"><img src="P1.png"></div>
             <div class="marquee-item"><img src="P2.png"></div>
@@ -136,87 +151,88 @@
         </div>
     </div>
 
-    <div id="intro-overlay">
-        <h1>GAME DESIGNER<br>이재영<br><span>PORTFOLIO</span></h1>
-        <button class="btn-pixel blink" onclick="startGame()">START ADVENTURE</button>
-        <p style="margin-top: 30px; font-size: 0.7rem; color: #444;">© 2026 JAE YOUNG LEE [cite: 5, 13]</p>
-    </div>
-
-    <header>
-        <h1>LEE JAE YOUNG<span>_</span></h1>
-        <p class="tagline">"끈기 있는 데이터 기반의 게임 체인저" [cite: 9]</p>
-    </header>
-
-    <h2 class="section-title">> PLAYER ABILITIES</h2>
+    <div style="height: 60px;"></div> <h2 class="section-title">> 보유 기술(PLAYER ABILITIES)</h2>
     <div class="skills-wrapper">
         <div class="skill-group">
-            <div class="skill-group-title">COLLABORATION</div>
+            <div class="skill-group-title">협업 & 관리</div>
             <div class="skill-item">
                 <div class="skill-name">Jira</div><div class="stars">★★★★★</div>
-                <div class="skill-desc">마일스톤 관리 및 이슈 트래킹 [cite: 30, 36]</div>
+                <div class="skill-desc">마일스톤 관리 및 이슈 트래킹</div>
             </div>
             <div class="skill-item">
                 <div class="skill-name">Slack</div><div class="stars">★★★★★</div>
-                <div class="skill-desc">원활한 팀 커뮤니케이션 [cite: 31, 35]</div>
+                <div class="skill-desc">원활한 팀 커뮤니케이션</div>
             </div>
             <div class="skill-item">
                 <div class="skill-name">Confluence</div><div class="stars">★★★★★</div>
-                <div class="skill-desc">프로젝트 문서화 및 아카이빙 [cite: 32, 38]</div>
+                <div class="skill-desc">프로젝트 문서화 및 아카이빙</div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-name">Notion</div><div class="stars">★★★★☆</div>
+                <div class="skill-desc">대시보드 및 일정 관리</div>
             </div>
         </div>
         <div class="skill-group">
-            <div class="skill-group-title">DATA & DESIGN</div>
+            <div class="skill-group-title">기획 & 데이터</div>
             <div class="skill-item">
                 <div class="skill-name">Excel</div><div class="stars">★★★★☆</div>
-                <div class="skill-desc">데이터 분석 및 VBA 자동화 [cite: 44, 53]</div>
+                <div class="skill-desc">데이터 분석 및 VBA 자동화</div>
             </div>
             <div class="skill-item">
                 <div class="skill-name">Figma</div><div class="stars">★★★★☆</div>
-                <div class="skill-desc">UI/UX 설계 및 프로토타입 [cite: 42, 49]</div>
+                <div class="skill-desc">UI/UX 설계 및 프로토타입</div>
             </div>
             <div class="skill-item">
-                <div class="skill-name">PPT</div><div class="stars">★★★★☆</div>
-                <div class="skill-desc">비즈니스 제안서 작성 전문 [cite: 43, 50]</div>
+                <div class="skill-name">PowerPoint</div><div class="stars">★★★★☆</div>
+                <div class="skill-desc">비즈니스 제안서 및 문서 작성</div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-name">Word</div><div class="stars">★★★★☆</div>
+                <div class="skill-desc">표준 문서 관리 및 명세서</div>
             </div>
         </div>
         <div class="skill-group">
-            <div class="skill-group-title">DEV & ENGINE</div>
+            <div class="skill-group-title">개발 & 엔진</div>
             <div class="skill-item">
                 <div class="skill-name">Gamemaker</div><div class="stars">★★★★☆</div>
-                <div class="skill-desc">1인 기획 및 개발 프로세스 [cite: 57, 59]</div>
+                <div class="skill-desc">축구+리듬 하이브리드 게임 기획</div>
             </div>
             <div class="skill-item">
                 <div class="skill-name">Unity</div><div class="stars">★★★☆☆</div>
-                <div class="skill-desc">엔진 기반 협업 및 기능 활용 [cite: 64, 68]</div>
+                <div class="skill-desc">엔진 기반 협업 및 기능 활용</div>
+            </div>
+            <div class="skill-item">
+                <div class="skill-name">Gemini</div><div class="stars">★★★★☆</div>
+                <div class="skill-desc">코딩 파트너 및 데이터 시각화</div>
             </div>
             <div class="skill-item">
                 <div class="skill-name">NotebookLM</div><div class="stars">★★★★☆</div>
-                <div class="skill-desc">방대한 설정 분석 및 검증 [cite: 65, 67]</div>
+                <div class="skill-desc">방대한 설정 분석 및 검증</div>
             </div>
         </div>
     </div>
 
-    <h2 class="section-title">> SELECT STAGE</h2>
+    <h2 class="section-title">> 프로젝트(SELECT STAGE)</h2>
     <div class="project-container">
         <div class="project-card" onclick="openModal(0)">
             <div class="card-img-box"><img src="P1.png"></div>
-            <div class="card-info-box"><span class="tag">SOLO QUEST</span><h3>RHYTHM ELEVEN [cite: 95]</h3></div>
+            <div class="card-info-box"><span class="tag">SOLO QUEST</span><h3>RHYTHM ELEVEN</h3></div>
         </div>
         <div class="project-card" onclick="openModal(1)">
             <div class="card-img-box"><img src="P2.png"></div>
-            <div class="card-info-box"><span class="tag">PARTY QUEST</span><h3>코코두기 (KOKODUGI) [cite: 251]</h3></div>
+            <div class="card-info-box"><span class="tag">PARTY QUEST</span><h3>KOKODUGI (코코두기)</h3></div>
         </div>
         <div class="project-card" onclick="openModal(2)">
             <div class="card-img-box"><img src="P3.png"></div>
-            <div class="card-info-box"><span class="tag">EA MISSION</span><h3>밸런스 개선 제안 [cite: 318]</h3></div>
+            <div class="card-info-box"><span class="tag">EA MISSION</span><h3>밸런스 개선 제안</h3></div>
         </div>
         <div class="project-card" onclick="openModal(3)">
             <div class="card-img-box"><img src="P4.png"></div>
-            <div class="card-info-box"><span class="tag">SYSTEM DESIGN</span><h3>감독의 전술 노트 [cite: 417]</h3></div>
+            <div class="card-info-box"><span class="tag">SYSTEM DESIGN</span><h3>감독의 전술 노트</h3></div>
         </div>
         <div class="project-card" onclick="openModal(4)">
             <div class="card-img-box"><img src="P5.png"></div>
-            <div class="card-info-box"><span class="tag">DATA ANALYSIS</span><h3>공공 야간약국 선정 [cite: 607]</h3></div>
+            <div class="card-info-box"><span class="tag">DATA ANALYSIS</span><h3>공공 야간약국 선정</h3></div>
         </div>
     </div>
 
@@ -239,36 +255,36 @@
             { 
                 title: "RHYTHM ELEVEN", 
                 tag: "1인 기획 & 개발", 
-                desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 독창적 장르입니다[cite: 108]. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다[cite: 105].", 
-                achievements: "<li>동적 난이도 시스템 설계 [cite: 216]</li><li>코드 기반 유연한 비주얼 연출 구현 [cite: 226]</li>", 
+                desc: "축구 전략성과 리듬 실력 기반 입력을 융합한 게임입니다. AI 협업을 통해 로직 효율성을 검증하며 완성도를 높였습니다.", 
+                achievements: "<li>동적 난이도 시스템 설계</li><li>코드 기반 유연한 비주얼 연출 구현</li>", 
                 img: "P1.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
-                title: "코코두기 (KOKODUGI)", 
+                title: "KOKODUGI (코코두기)", 
                 tag: "10인 팀 협업", 
-                desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다[cite: 269]. 10인 팀워크로 실제 상용화 단계를 고려한 제작 과정을 경험했습니다[cite: 263].", 
-                achievements: "<li>VBA 기반 전용 데이터 매니저 구축 [cite: 308]</li><li>단계적 튜토리얼 및 레벨 밸런싱 [cite: 288]</li>", 
+                desc: "사용자 시선의 학습 곡선을 설계한 기업 연계 프로젝트입니다. 레벨 디자인과 데이터 입력 도구 개발을 주도했습니다.", 
+                achievements: "<li>VBA 기반 전용 데이터 매니저 구축</li><li>단계적 튜토리얼 및 레벨 밸런싱</li>", 
                 img: "P2.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
-                title: "밸런스 개선안", 
+                title: "게임 밸런스 개선안", 
                 tag: "EA KOREA 실무", 
-                desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다[cite: 350].", 
-                achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명 [cite: 371]</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증 [cite: 371]</li>", 
+                desc: "라이브 지표 분석을 통해 유저 만족도 하락 원인을 분석하고, 데이터에 근거한 개선안을 제안했습니다.", 
+                achievements: "<li>로빙 스루 패스 지표 83% 감소 원인 규명</li><li>수비 AI 개선에 따른 간접적 너프 영향 입증</li>", 
                 img: "P3.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "감독의 전술 노트", 
                 tag: "신규 시스템 제안", 
-                desc: "FC ONLINE 신규 시스템 제안서로, 전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다[cite: 428].", 
-                achievements: "<li>수집-조합-시너지-성장 코어 루프 설계 [cite: 483]</li><li>시즌 패스 및 감독팩 유료화 모델링 [cite: 526]</li>", 
+                desc: "전술적 갈증을 성장의 재미로 전환하는 수집 시스템입니다. 유기적인 선순환 구조와 다각도 BM을 설계했습니다.", 
+                achievements: "<li>수집-조합-시너지-성장 코어 루프 설계</li><li>시즌 패스 및 감독팩 유료화 모델링</li>", 
                 img: "P4.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             },
             { 
                 title: "공공 야간약국 최적지", 
                 tag: "데이터 분석", 
-                desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다[cite: 645]. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다[cite: 677].", 
-                achievements: "<li>자치구별 복합 가중치 분석 모델 설계 [cite: 678]</li><li>QGIS 시각화를 통한 최적지 산출 [cite: 679]</li>", 
+                desc: "의료 사각지대 해소를 위한 정량적 입지 분석 프로젝트입니다. 복합 지표 가중치 로직을 통해 실질적인 해결책을 도출했습니다.", 
+                achievements: "<li>자치구별 복합 가중치 분석 모델 설계</li><li>QGIS 시각화를 통한 최적지 산출</li>", 
                 img: "P5.png", pdf: "데브켓_포트폴리오_이재영.pdf" 
             }
         ];
