--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <h2 class="section-title">> PLAYER ABILITIES(보유 기술)</h2>
     <div class="skills-wrapper">
         <div class="skill-group">
-            <div class="skill-group-title">협업 & 관리(MANAGEMENT)</div>
+            <div class="skill-group-title">협업 & 관리</div>
             <div class="skill-item">
                 <div class="skill-name-row"><span class="skill-name">Jira</span> <span class="stars">★★★★★</span></div>
                 <div class="skill-desc">마일스톤 관리 및 이슈 트래킹</div>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="skill-group">
-            <div class="skill-group-title">기획 & 데이터(DESIGN & DATA)</div>
+            <div class="skill-group-title">기획 & 분석</div>
             <div class="skill-item">
                 <div class="skill-name-row"><span class="skill-name">Excel</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">데이터 분석 및 VBA 자동화</div>
@@ -177,7 +177,7 @@
         </div>
 
         <div class="skill-group">
-            <div class="skill-group-title">개발 & 엔진(DEV & ENGINE)</div>
+            <div class="skill-group-title">개발 & 엔진</div>
             <div class="skill-item">
                 <div class="skill-name-row"><span class="skill-name">Gamemaker</span> <span class="stars">★★★★☆</span></div>
                 <div class="skill-desc">축구+리듬 하이브리드 게임 기획</div>
