--- a/index.html
+++ b/index.html
@@ -236,14 +236,14 @@
                 assets: [
                     // [요청 반영] 순서 재구성 및 엑셀 통합
                     { type: "video", title: "플레이 영상", url: "https://www.youtube.com/embed/Y4jyfOewBBM?enablejsapi=1" },
-                    { type: "pdf", title: "보고서", url: "P2_1.pdf" },
+                    { type: "pdf", title: "프로젝트 보고서", url: "P2_1.pdf" },
                     { 
                         type: "excel-combined", 
-                        title: "엑셀", 
+                        title: "데이터 입력기", 
                         videoUrl: "https://www.youtube.com/embed/KfmdTe9rUjM?enablejsapi=1",
                         downloadUrl: "KOKO_Data_Manager.xlsm" 
                     },
-                    { type: "link", title: "상세 기획", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2?source=copy_link" }
+                    { type: "link", title: "상세 기획서", url: "https://www.notion.so/2bedfa2a48818195bbcdc00abec311d2?source=copy_link" }
                 ] 
             },
             { title: "밸런스 개선 제안", tag: "PLAYER-DRIVEN PROPOSAL", desc: "라이브 지표 분석을 통해 개선안을 도출한 실무형 프로젝트입니다.", achievements: "<li>로빙 스루 패스 지표 분석</li><li>수비 AI 개선 영향 분석</li>", img: "P3.png", assets: [ { type: "pdf", title: "밸런스 개선안", url: "P3_1_개선사항.pdf" }, { type: "pdf", title: "영향 분석서", url: "P3_2_게임분석서.pdf" } ] },
